# test_resume

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.db.yaml  docker-compose.yaml  nginx.conf
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 4459c55827db_.py  f450f05d2fb4_.py
api/src/: config.py  database.py  dependencies.py  main.py
api/src/auth/: __init__.py  backends.py  manager.py  router.py
api/src/resumes/: __init__.py  llm.py  models.py  router.py  schemas.py  utils.py
api/src/users/: __init__.py  models.py  schemas.py
app/: Dockerfile  entrypoint.sh  package-lock.json  package.json
app/src/: App.js  index.js
app/src/api/: auth.js  resumes.js
app/src/components/: AddResume.js  Auth.js  Auth.jsx  Auth.module.css  AuthForm.module.css  PrivateRoute.jsx  PublicRoute.jsx  ResumeDetails.js  ResumeDetails.jsx  ResumeDetails.module.css  Resumes.js  Resumes.jsx  Resumes.module.css
app/src/contexts/: AuthContext.js
